# mcwf_poc

./: .gitignore  pyproject.toml
.superpowers/plans/: 2026-04-07-shared-ansa-process.md
.superpowers/specs/: 2026-04-07-shared-ansa-process-design.md
ansa/agent-harness/: setup.py
ansa/agent-harness/cli_anything/ansa/: README.md
ansa/agent-harness/cli_anything/ansa/core/: checks.py  project.py
ansa/agent-harness/cli_anything/ansa/tests/: test_full_e2e.py
backend/: .env.example  README.md  graph.json  pyproject.toml
backend/app/: config.py
backend/app/agents/: __init__.py  ansa_agent.py  process_registry.py
backend/app/api/: __init__.py  routes.py  websocket.py
backend/app/core/: ansa_backend.py  project.py  session.py
backend/app/graph/: __init__.py  state.py  workflow.py
backend/app/utils/: ansa_backend.py
backend/experiments/7b814c3b051f479784de7bc7da33e5cf/: result.json
backend/tests/agents/: test_ansa_agent.py  test_process_registry.py
backend/tests/core/: test_ansa.py  test_ansa_backend.py  test_project.py
backend/tests/graph/: test_state.py  test_workflow.py
example/: demo.py
tools/ansa/agent-harness/: ANSA.md
tools/ansa/agent-harness/cli_anything/ansa/: __init__.py  __main__.py  ansa_cli.py
tools/ansa/agent-harness/cli_anything/ansa/core/: connections.py  export.py  mesh.py
tools/ansa/agent-harness/cli_anything/ansa/skills/: SKILL.md
tools/ansa/agent-harness/cli_anything/ansa/tests/: TEST.md  test_core.py  test_full_e2e.py
