[project]
name = "mcwf-poc"
version = "0.1.0"
description = "MetaCreate Workflow PoC"
authors = [
    {name = "Ming Zhao",email = "jobine_cn@hotmail.com"}
]
license = {text = "Apache 2.0"}
requires-python = "<4.0.0,>=3.12"
dependencies = [
    "langchain (>=1.2.13,<2.0.0)",
    "langgraph (>=1.1.3,<2.0.0)",
    "langchain-openai (>=1.1.11,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
