[project]
name = "mcwf-poc"
version = "0.1.0"
description = "MetaCreate Workflow PoC"
authors = [
    {name = "Ming Zhao",email = "jobine_cn@hotmail.com"}
]
license = {text = "Apache 2.0"}
requires-python = "<4.0.0,>=3.12"
dependencies = [
    "langchain (>=1.2.13,<2.0.0)",
    "langgraph (>=1.1.3,<2.0.0)",
    "langchain-openai (>=1.1.11,<2.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.34.0,<1.0.0)",
    "sse-starlette (>=2.0.0,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)"
]


[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
